--- a/src/app/components/challenges/challenge-list/challenge-list.html
+++ b/src/app/components/challenges/challenge-list/challenge-list.html
@@ -1,6 +1,6 @@
 <div class="container py-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Retos Disponibles</h1>
+    <h1>Retos</h1>
     <div class="w-25">
       <select
         class="form-select"
